--- a/account-client/index.html
+++ b/account-client/index.html
@@ -9,5 +9,10 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script>
+      window.onbeforeunload = function () {
+        return;
+      };
+    </script>
   </body>
 </html>
